<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_icon_label">Find Things</string>
    <string name="app_name">Find My Things</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="prompt_password">Password</string>
    <string name="address">Address</string>
    <string name="phone_number">11 Digit phone number</string>
    <string name="register">Register</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_activity_submit">Submit</string>
    <string name="required">Required</string>
    <string name="optional">Optional</string>
    <string name="pref_type">Kind</string>
    <string name="action_submit">Submit</string>
    <string name="category_type">Category</string>
    <string name="location">Location</string>
    <string name="reward">Reward</string>
    <string name="description">Description</string>
    <string name="date_submitted">Date Submitted</string>
    <string name="item_name">Item name</string>
    <string name="i_example">Bike/Photo Album/Baby etc.</string>
    <string name="admin_create">Create admin</string>
    <string name="action_refresh">Refresh</string>
    <string name="no_items_found">No items found!</string>
    <string name="no_users_found">No users found!</string>
    <string name="error_loading_items">Couldn\'t load items! Please try again later.</string>
    <string name="error_loading_users">Couldn\'t load users! Please try again later.</string>

    <string-array name="item_category">
        <item>Heir</item>
        <item>Keepsake</item>
        <item>Misc</item>
    </string-array>
    <string-array name="item_category_descriptions">
        <item>A valuable object that has belonged to a family for several generations.</item>
        <item>A small item kept in memory of the person who gave it or originally owned it.</item>
        <item>Items not fitting into another category.</item>
    </string-array>
    <string-array name="item_type">
        <item>Lost</item>
        <item>Found</item>
        <item>Donated</item>
        <item>Requested</item>
    </string-array>
    <string-array name="item_type_descriptions">
        <item>I\'m looking for something that is mine.</item>
        <item>I\'m looking for the owner of something I found.</item>
        <item>I\'m looking for someone who needs something.</item>
        <item>I\'m looking for something I need.</item>
    </string-array>

    <string name="title_activity_item_detail">Item Detail</string>
    <string name="title_activity_admin">Administration</string>
    <string name="title_activity_admin_popup">Edit User</string>
    <string name="title_activity_admin_create">Create an Admin</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_my_account">My Account</string>
    <string name="title_activity_my_account_edit">Edit Account</string>
    <string name="title_activity_filter">Filter Items</string>
    <string name="title_activity_submit">Submit an Item</string>
    <string name="title_activity_search_results">Search Results</string>

    <string name="dialog_positive_default">OK</string>
    <string name="dialog_negative_default">Cancel</string>

    <string name="item_detail_inet_err">Error: no active internet connection.</string>
    <string name="item_detail_playstore_err">Error: please make sure that you have the Play Store installed.</string>
    <string name="maps_location_find_err">Unable to find the location using Google Maps at this time, please try again later.</string>
    <string name="maps_location_inet_err">Unable to reach Google Maps at this time, please check your connection strength.</string>

    <string name="search_results_done">Done</string>
    <string name="filtering_title">Filtering \'%1$s\'</string>
    <string name="filtering_done">Reset</string>

    <string name="main_logged_in">Logged in!</string>

    <string name="admin_delete_user">Delete</string>
    <string name="admin_lock_user">Lock</string>
    <string name="admin_elevate_user">Admin</string>

    <string name="submit_describe">Short description</string>

    <string name="admin_user_search">Search by user</string>

    <string name="submit_progress_message">Submitting…</string>
    <string name="register_progress_message">Registering…</string>

    <string name="item_load_more">Load more…</string>
    <string name="error_passwords_match">Passwords do not match.</string>
    <string name="error_invalid_phone">Phone number not correct.</string>
    <string name="error_short_password">Password too short.</string>
    <string name="error_already_user">Already registered.</string>


    <string name="item_detail_map">Show on Map</string>
</resources>