<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Register" >

    <QuickContactBadge
        android:id="@+id/quickContactBadge1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/quickContactBadge1"
        android:layout_toRightOf="@+id/quickContactBadge1"
        android:ems="10"
        android:hint="@string/prompt_name"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/email"
        android:layout_alignRight="@id/email"
        android:layout_below="@id/email"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pass"
        android:layout_alignRight="@+id/pass"
        android:layout_below="@+id/pass"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/confirmpass"
        android:layout_alignRight="@+id/confirmpass"
        android:layout_below="@+id/confirmpass"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/phone"
        android:layout_below="@+id/phone"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/address"
        android:layout_alignRight="@+id/address"
        android:layout_below="@+id/address"
        android:layout_marginTop="44dp"
        android:text="@string/register" />

    <EditText
        android:id="@id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/quickContactBadge1"
        android:layout_alignRight="@+id/name"
        android:layout_below="@+id/quickContactBadge1"
        android:layout_marginTop="57dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress" />

</RelativeLayout>