<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".action_cancelaction_accept" >

        <EditText
            android:id="@+id/admin_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:paddingBottom="@dimen/form_activity_input_pad_vertical"
            android:paddingRight="@dimen/form_activity_input_pad_horizontal"
            android:paddingTop="@dimen/form_activity_input_pad_vertical" />
        <requestFocus />
        <EditText
            android:id="@+id/admin_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/admin_email"
            android:layout_alignRight="@+id/admin_email"
            android:layout_below="@+id/admin_email"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/form_activity_input_pad_vertical"
            android:paddingRight="@dimen/form_activity_input_pad_horizontal"
            android:paddingTop="@dimen/form_activity_input_pad_vertical" />
         <EditText
            android:id="@+id/confirmpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/admin_pass"
            android:layout_alignRight="@+id/admin_pass"
            android:layout_below="@+id/admin_pass"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/form_activity_input_pad_vertical"
            android:paddingRight="@dimen/form_activity_input_pad_horizontal"
            android:paddingTop="@dimen/form_activity_input_pad_vertical" />

</RelativeLayout>