<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_account_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".action_cancelaction_accept" >

        <EditText
            android:id="@+id/personname"
            style="@style/HeaderLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/personfaceview"
            android:layout_alignParentRight="true"
            android:focusable="false"
            android:layout_toRightOf="@+id/personfaceview"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/prompt_name"
            android:inputType="none"
            android:paddingBottom="@dimen/form_activity_input_pad_vertical"
            android:paddingTop="@dimen/form_activity_input_pad_vertical" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/phoneview"
            style="@style/HeaderLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:focusable="false"
            android:layout_alignParentRight="true"
            android:layout_alignRight="@+id/personname"
            android:layout_below="@+id/emailview"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/phone_number"
            android:inputType="none"
            android:paddingBottom="@dimen/form_activity_input_pad_vertical"
            android:paddingTop="@dimen/form_activity_input_pad_vertical" />

        <EditText
            android:id="@+id/addressview"
            style="@style/HeaderLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/phoneview"
            android:layout_toLeftOf="@+id/loc_human"
            android:ems="10"
            android:enabled="false"
            android:focusable="false"
            android:hint="@string/address"
            android:inputType="none"
            android:lines="2"
            android:minLines="2"
            android:paddingBottom="@dimen/form_activity_input_pad_vertical"
            android:paddingTop="@dimen/form_activity_input_pad_vertical"
            android:scrollHorizontally="false"
            android:singleLine="false" />

        <Button
            android:id="@+id/loc_human"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/addressview"
            android:background="@drawable/action_map"
            android:maxHeight="48dp"
            android:maxWidth="48dp"
            android:onClick="toMap"
            android:scaleType="centerInside" />

        <QuickContactBadge
            android:id="@+id/personfaceview"
            android:layout_width="wrap_content"
            android:focusable="false"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/personname"
            android:paddingLeft="7dp"
            android:src="@drawable/default_contact" />

        <EditText
            android:id="@+id/emailview"
            style="@style/HeaderLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:layout_alignLeft="@+id/phoneview"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/personfaceview"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/prompt_email"
            android:inputType="none"
            android:paddingBottom="@dimen/form_activity_input_pad_vertical"
            android:paddingTop="@dimen/form_activity_input_pad_vertical" />

    </RelativeLayout>

</ScrollView>